Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -54,9 +54,12 @@
 
 body {
     margin: 0;
+    padding: 0;
+
+    overflow: hidden;
 }
 
-* {
+#App * {
     box-sizing: border-box;
 }
 
